Fix <h4> alignment under recipe pages

--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@
 }
 
 h1,
-h3,
-h4 {
+h3 {
     text-align: center;
 }
 
